--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -374,7 +374,16 @@ img#LeftPanelProfileImage {
     font-size: 20px;
     font-weight: 700;
     font-family: PT Sans;
-    color#999999;
+    color:#999999;
 }
 
+#welcomemsg {
+    
+font-style:italic; padding:15px;  line-height: 20px; text-align: center;color:#cc0000; font-family: Helvetica; font-size: 17px; font-weight: 700;
+}
+
+#vision {
+    font-style: italic; padding:15px; line-height: 20px; text-align: center;color:#cc0000; font-family: PT Sans; font-size: 15px; font-weight: 700; }
+    
+}
 /* End of CSS document */
