right panel overall changes

--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -414,5 +414,11 @@ img#LeftPanelProfileImage {
     width:200px;
 }
 
+#beta {
+    font-size: 25px;
+    font-weight: 700;
+    font-family: PT Sans;
+    color:blue;
+}
 
 /* End of CSS document */
