--- a/css/register.css
+++ b/css/register.css
@@ -314,5 +314,12 @@ img#LeftPanelProfileImage {
     
 }
 
+#beta {
+    font-size: 25px;
+    font-weight: 700;
+    font-family: PT Sans;
+    color:blue;
+}
+
 
 /* End of CSS document */
