--- a/css/confirmInvitationsipad.css
+++ b/css/confirmInvitationsipad.css
@@ -206,3 +206,10 @@ a#InvitesSentId.confirminvitesButton.ui-link {
     font-size: 25px;
     text-transform: uppercase;
 }
+
+#beta {
+    font-size: 40px;
+    font-weight: 700;
+    font-family: PT Sans;
+    
+}
