--- a/css/findYourPeopleipad.css
+++ b/css/findYourPeopleipad.css
@@ -207,3 +207,10 @@ h4#bioText {
 fieldset.ui-grid-b{
     padding-right: 100px;
 }
+
+#beta {
+    font-size: 40px;
+    font-weight: 700;
+    font-family: PT Sans;
+    
+}
