--- a/css/login.css
+++ b/css/login.css
@@ -319,4 +319,10 @@ img#LeftPanelProfileImage {
     width:200px;
 }
 
+#beta {
+    font-size: 25px;
+    font-weight: 700;
+    font-family: PT Sans;
+    color:blue;
+}
 /* End of CSS document */
