--- a/css/myTablesipad.css
+++ b/css/myTablesipad.css
@@ -115,3 +115,10 @@ text-transform: uppercase;
     font-size: 25px;
     text-transform: uppercase;
 }
+
+#beta {
+    font-size: 40px;
+    font-weight: 700;
+    font-family: PT Sans;
+    
+}
