--- a/css/pendingInvitations.css
+++ b/css/pendingInvitations.css
@@ -275,4 +275,11 @@ p {
     font-family: Helvetica;
     font-weight: 400;
 }
+
+#beta {
+    font-size: 25px;
+    font-weight: 700;
+    font-family: PT Sans;
+    color:blue;
+}
 /* End of CSS document */
