--- a/css/findYourPeopleipad.css
+++ b/css/findYourPeopleipad.css
@@ -59,7 +59,7 @@ fieldset label {
 }
 
 input#addButton {
-    height:200px;
+    height:190px;
     width:424px;
 }
 
@@ -214,3 +214,28 @@ fieldset.ui-grid-b{
     font-family: PT Sans;
     
 }
+
+#welcomemsg {
+    
+font-style:italic;
+padding:20px;
+line-height: 35px;
+text-align: center;
+color:#cc0000;
+font-family: Helvetica;
+font-size: 25px;
+font-weight: 400;
+}
+
+#vision {
+    font-style: italic;
+    padding:20px;
+    line-height: 35px;
+   
+    color:#cc0000;
+    font-family: PT Sans;
+    font-size: 23px;
+    font-weight: 400;
+    
+}
+
