--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -379,11 +379,11 @@ img#LeftPanelProfileImage {
 
 #welcomemsg {
     
-font-style:italic; padding:15px;  line-height: 25px; text-align: center;color:#cc0000; font-family: Helvetica; font-size: 17px; font-weight: 700;
+font-style:italic; padding:15px;  line-height: 25px; text-align: center;color:#cc0000; font-family: Helvetica; font-size: 17px; font-weight:400;
 }
 
 #vision {
-    font-style: italic; padding:15px; line-height: 25px; text-align: center;color:#cc0000; font-family: PT Sans; font-size: 15px; font-weight: 700; }
+    font-style: italic; padding:15px; line-height: 25px; color:#cc0000; font-family: PT Sans; font-size: 15px; font-weight: 400; 
     
 }
 /* End of CSS document */
