--- a/css/myTables.css
+++ b/css/myTables.css
@@ -295,4 +295,14 @@ div.ui-bar.ui-bar-a.text {
     font-family: PT Sans;
     color:blue;
 }
+
+#welcomemsg {
+    
+font-style:italic; padding:15px;  line-height: 25px; text-align: center;color:#cc0000; font-family: Helvetica; font-size: 17px; font-weight:400;
+}
+
+#vision {
+    font-style: italic; padding:15px; line-height: 25px; color:#cc0000; font-family: PT Sans; font-size: 15px; font-weight: 400; 
+    
+}
 /* End of CSS document */
