--- a/css/myTablesipad.css
+++ b/css/myTablesipad.css
@@ -122,3 +122,27 @@ text-transform: uppercase;
     font-family: PT Sans;
     
 }
+
+#welcomemsg {
+    
+font-style:italic;
+padding:20px;
+line-height: 35px;
+text-align: center;
+color:#cc0000;
+font-family: Helvetica;
+font-size: 25px;
+font-weight: 400;
+}
+
+#vision {
+    font-style: italic;
+    padding:20px;
+    line-height: 35px;
+   
+    color:#cc0000;
+    font-family: PT Sans;
+    font-size: 23px;
+    font-weight: 400;
+    
+}
