--- a/css/registeripad.css
+++ b/css/registeripad.css
@@ -97,3 +97,27 @@ button#submitRegistrationButton.ui-btn.ui-shadow.ui-corner-all {
     font-family: PT Sans;
     
 }
+
+#welcomemsg {
+    
+font-style:italic;
+padding:20px;
+line-height: 35px;
+text-align: center;
+color:#cc0000;
+font-family: Helvetica;
+font-size: 25px;
+font-weight: 400;
+}
+
+#vision {
+    font-style: italic;
+    padding:20px;
+    line-height: 35px;
+   
+    color:#cc0000;
+    font-family: PT Sans;
+    font-size: 23px;
+    font-weight: 400;
+    
+}
