--- a/css/confirmInvitationsipad.css
+++ b/css/confirmInvitationsipad.css
@@ -200,7 +200,7 @@ a#InvitesSentId.confirminvitesButton.ui-link {
     width: 400px !important;
 }
 
-#myTable, #invites, #login, #logout, #home {
+#myTable, #login, #logout, #home {
     background-color: #fff;
     font-family: PT Sans;
     font-size: 25px;
