--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -380,7 +380,7 @@ fieldset#tags {
    
 }
 
-#myTable, #invites, #login, #logout, #home {
+#myTable, #login, #logout, #home {
     background-color: #fff;
     font-family: PT Sans;
     text-transform: uppercase;
