--- a/css/findYourPeople.css
+++ b/css/findYourPeople.css
@@ -358,7 +358,7 @@ fieldset.ui-grid-b {
     height:80px;
 }
 
-#myTable, #invites, #login, #logout,#home {
+#myTable, #login, #logout,#home {
     background-color: #fff;
     font-family: PT Sans;
     text-transform: uppercase;
