--- a/css/myTables.css
+++ b/css/myTables.css
@@ -235,7 +235,7 @@ div.ui-bar.ui-bar-a.text {
    
 }
 
-#myTable, #invites, #login,#logout, #home {
+#myTable, #login,#logout, #home {
     background-color: #fff;
     font-family: PT Sans;
     text-transform: uppercase;
