--- a/css/myTablesipad.css
+++ b/css/myTablesipad.css
@@ -109,7 +109,7 @@ text-transform: uppercase;
     width: 400px !important;
 }
 
-#myTable, #invites, #login, #logout, #home {
+#myTable, #login, #logout, #home {
     background-color: #fff;
     font-family: PT Sans;
     font-size: 25px;
