changes for new panel in mood page for notifications

--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -77,6 +77,29 @@ h4 {
     border-style: hidden;
     -webkit-box-shadow: none;
 }
+.ui-icon-red-dot:after {
+	background-image: url("../images/red-dot.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
+
+.ui-icon-red-ring-dot:after {
+	background-image: url("../images/red-ring-dot.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 
 .ui-icon-bell:after {
 	background-image: url("../images/bell.png");
