changes for new panel in mood page for notifications

--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -402,6 +402,10 @@ img#LeftPanelProfileImage {
 .ui-btn, label.ui-btn {
     font-weight: 400;
 }
+.imagesize {
+    height:50px;
+    /*width: 100%;*/
+}
 
 #beta {
     font-size: 25px;
