multiple changes for new panel in all pages for notifications

--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -402,7 +402,7 @@ img#LeftPanelProfileImage {
 .ui-btn, label.ui-btn {
     font-weight: 400;
 }
-.imagesize {
+.panelimagesize {
     height:50px;
     /*width: 100%;*/
 }
