--- a/css/confirmInvitations.css
+++ b/css/confirmInvitations.css
@@ -72,6 +72,29 @@ h4 {
     border-style: hidden;
     -webkit-box-shadow: none;
 }
+.ui-icon-red-dot:after {
+	background-image: url("../images/red-dot.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
+
+.ui-icon-red-ring-dot:after {
+	background-image: url("../images/red-ring-dot.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 
 .ui-icon-bell:after {
     background-image: url("../images/bell.png");
@@ -359,6 +382,11 @@ fieldset label {
 .imagesize {
     height:145px;
     width:105px;
+}
+
+.panelimagesize {
+    height:50px;
+    /*width: 100%;*/
 }
 
 div#confirmImg {
