--- a/css/findYourPeople.css
+++ b/css/findYourPeople.css
@@ -74,7 +74,29 @@ h4 {
     border-style: hidden;
     -webkit-box-shadow: none;
 }
+.ui-icon-red-dot:after {
+	background-image: url("../images/red-dot.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 
+.ui-icon-red-ring-dot:after {
+	background-image: url("../images/red-ring-dot.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 .ui-icon-bell:after {
     background-image: url("../images/bell.png");
     background-color: transparent;
@@ -421,6 +443,11 @@ img#LeftPanelProfileImage {
 .biodiv {
     text-align: center;
 height:105px;
+}
+
+.panelimagesize {
+    height:50px;
+    /*width: 100%;*/
 }
 
 #beta {
