--- a/css/view.css
+++ b/css/view.css
@@ -79,6 +79,29 @@ h4 {
     -webkit-box-shadow: none;
 }
 
+.ui-icon-red-dot:after {
+	background-image: url("../images/red-dot.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
+
+.ui-icon-red-ring-dot:after {
+	background-image: url("../images/red-ring-dot.png");
+	background-color: transparent;
+    box-shadow: none;
+    -moz-border-radius: 0px;
+    -webkit-border-radius:0px;
+    border-radius:0px;
+    border: none;
+    border-style: hidden;
+    -webkit-box-shadow: none;
+}
 .ui-icon-bell:after {
     background-image: url("../images/bell.png");
     background-color: transparent;
@@ -387,6 +410,11 @@ fieldset label {
 .imagesize {
     height:125px;
     width: 100%;
+}
+
+.panelimagesize {
+    height:50px;
+    /*width: 100%;*/
 }
 
 div#confirmImg {
