--- a/css/mood_1.css
+++ b/css/mood_1.css
@@ -11,10 +11,34 @@
     padding: 0px !important;
     background-color: #fff;
 }
+.ui-header-notificationNo {
+    font-size: 20px; 
+    float:right; 
+    color:#ffffff; 
+    background-image: url("../images/notificationBackground.png");
+    height: 30px;
+    width: 30px;
+}
 
+.ui-leftNavButton {
+    background-image: url("../images/LeftNavButton.png");
+    background-color: #fff;
+    height: 24px;
+    width: 28px;
+    
+}
+
+.ui-rightNavButton {
+    background-image: url("../images/RightNavButton.png");
+    height: 28px;
+    width: 12px;
+    background-color: #fff;
+   
+    
+}
 
 [data-role= "header"] h3{
-	color: #ffffff;
+//	color: #ffffff;
 	text-shadow: none;
 	font-weight: bold;
 	font-size: 15px;
@@ -27,9 +51,9 @@
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 1%;
-    margin-top: 1%;
-    font-size: 15px;
+    margin-bottom: 0%;
+    margin-top: 0%;
+    font-size: 20px;
     overflow: visible !important;
     white-space: normal !important;
     font-family: PT Sans, sans-serif;
@@ -37,7 +61,7 @@
 
 
 #header {
-	background: #cc0000 !important;
+	background: #ffffff !important;
 }
 
 #header a {
