--- a/css/register.css
+++ b/css/register.css
@@ -9,19 +9,36 @@
 
 
 
+.ui-leftNavButton {
+    background-image: url("../images/LeftNavButton.png");
+    background-color: #fff;
+    height: 24px;
+    width: 28px;
+    
+}
+
+.ui-rightNavButton {
+    background-image: url("../images/RightNavButton.png");
+    height: 30px;
+    width: 32px;
+    background-color: #fff;
+   
+    
+}
+
 [data-role= "header"] h3{
-	color: #ffffff;
+//	color: #ffffff;
 	text-shadow: none;
 	font-weight: bold;
 	font-size: 15px;
-        font-family: PT Sans;
 }
 
 .ui-header .ui-title {
     margin-right: 10%;
     margin-left: 10%;
-    margin-bottom: 2%;
-    font-size: 15px;
+    margin-bottom: 0%;
+    margin-top: 0%;
+    font-size: 20px;
     overflow: visible !important;
     white-space: normal !important;
     font-family: PT Sans, sans-serif;
@@ -29,8 +46,9 @@
 
 
 #header {
-	background: #cc0000 !important;
+	background: #ffffff !important;
 }
+
 
 .ui-icon-mygear:after {
 	background-image: url("../images/gear.png");
