--- a/css/view.css
+++ b/css/view.css
@@ -311,6 +311,41 @@ h4 {
     color: #cc0000;
 }
 
+.joinConversationButton {
+    margin-left: 10px;
+    margin-top: 20px;
+    -moz-box-shadow:inset 0px 1px 0px 0px #c62d1f;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #c62d1f;
+    box-shadow:inset 0px 1px 0px 0px #c62d1f;
+    background-color:#c62d1f;
+    -webkit-border-top-left-radius:6px;
+    -moz-border-radius-topleft:6px;
+    border-top-left-radius:6px;
+    -webkit-border-top-right-radius:6px;
+    -moz-border-radius-topright:6px;
+    border-top-right-radius:6px;
+    -webkit-border-bottom-right-radius:6px;
+    -moz-border-radius-bottomright:6px;
+    border-bottom-right-radius:6px;
+    -webkit-border-bottom-left-radius:6px;
+    -moz-border-radius-bottomleft:6px;
+    border-bottom-left-radius:6px;
+    text-indent:0px;
+    border:1px solid #d02718;
+    display:inline-block;
+    font-family: PT Sans Narrow;
+    font-size:22px;
+    font-weight:bold;
+    font-style:normal;
+    height:50px;
+    line-height:50px;
+    width:95%;
+    text-decoration:none;
+    text-align:center;
+    text-shadow:1px 1px 0px #810e05;
+    color: #ffffff;
+}
+
 .confirminvitesButton {
     margin-left: 10px;
     margin-top: 20px;
