style and other updates

--- a/css/login.css
+++ b/css/login.css
@@ -9,6 +9,7 @@
 
 .ui-content {
     padding: 0px !important;
+    background-color:#ffffff;
 }
 
 
@@ -44,7 +45,7 @@
     font-size: 20px;
     overflow: visible !important;
     white-space: normal !important;
-    font-family: PT Sans, sans-serif;
+    font-family: Helvetica;
 }
 
 
@@ -166,8 +167,6 @@ h4 {
 
 .findpplBtn {
 	-moz-box-shadow:inset 0px 1px 0px 0px #c62d1f;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #c62d1f;
-	box-shadow:inset 0px 1px 0px 0px #c62d1f;
 	background-color:#c62d1f;
 	-webkit-border-top-left-radius:6px;
 	-moz-border-radius-topleft:6px;
@@ -182,18 +181,16 @@ h4 {
 	-moz-border-radius-bottomleft:6px;
 	border-bottom-left-radius:6px;
 	text-indent:0px;
-	border:1px solid #d02718;
 	display:inline-block;
-	font-family: PT Sans Narrow;
-	font-size:17px;
-	font-weight:bold;
+	font-family: Helvetica;
+	font-size:16px;
+	font-weight:500;
 	font-style:normal;
 	height:40px;
 	line-height:40px;
 	width:250px;
 	text-decoration:none;
 	text-align:center;
-	text-shadow:1px 1px 0px #810e05;
 	color: #ffffff;
 
 }
