--- a/css/view.css
+++ b/css/view.css
@@ -43,6 +43,7 @@ text-shadow: none;
     
 }
 
+
 [data-role= "header"] h3{
 //	color: #ffffff;
 	text-shadow: none;
@@ -59,7 +60,7 @@ text-shadow: none;
     font-size: 20px;
     overflow: visible !important;
     white-space: normal !important;
-    font-family: PT Sans, sans-serif;
+    font-family: Helvetica;
 }
 
 
@@ -276,6 +277,8 @@ h4 {
     text-align: center;
 
 }
+.ui-grid-custom .ui-block-a { width: 35% }
+.ui-grid-custom .ui-block-b { width: 65%; } 
 
 .ui-block-a, .ui-block-b, .ui-block-c {
     padding:0em;
@@ -315,8 +318,6 @@ h4 {
     margin-left: 10px;
     margin-top: 20px;
     -moz-box-shadow:inset 0px 1px 0px 0px #c62d1f;
-    -webkit-box-shadow:inset 0px 1px 0px 0px #c62d1f;
-    box-shadow:inset 0px 1px 0px 0px #c62d1f;
     background-color:#c62d1f;
     -webkit-border-top-left-radius:6px;
     -moz-border-radius-topleft:6px;
@@ -331,10 +332,9 @@ h4 {
     -moz-border-radius-bottomleft:6px;
     border-bottom-left-radius:6px;
     text-indent:0px;
-    border:1px solid #d02718;
     display:inline-block;
-    font-family: PT Sans Narrow;
-    font-size:22px;
+    font-family: Helvetica;
+    font-size:15px;
     font-weight:bold;
     font-style:normal;
     height:50px;
@@ -467,7 +467,7 @@ fieldset label {
 }
 
 .ui-grid-b {
-    height: 60px;
+    height: 50px;
 }
 
 .imagesize {
