--- a/css/view.css
+++ b/css/view.css
@@ -18,10 +18,9 @@ text-shadow: none;
 }
 
 .ui-header-notificationNo {
-    font-size: 20px; 
+    font-size: 17px; 
     float:right; 
-    color:#ffffff; 
-    background-image: url("../images/notificationBackground.png");
+    color:#ff3300; 
     height: 30px;
     width: 30px;
 }
@@ -63,6 +62,7 @@ text-shadow: none;
     font-family: Helvetica;
 }
 
+.ui-btn-active { color: #ff3300 !important; background-color: #ffffff !important; text-shadow: none !important; }
 
 #header {
     background: #ffffff !important;
