--- a/css/view.css
+++ b/css/view.css
@@ -34,10 +34,10 @@ text-shadow: none;
 }
 
 .ui-rightNavButton {
-    background-image: url("../images/RightNavButton.png");
-    height: 30px;
-    width: 32px;
-    background-color: #fff;
+    background-image: url("../images/hamburger.png");
+    height: 21px;
+    width: 20px;
+    background-color: #fffff;
    
     
 }
@@ -375,38 +375,19 @@ h4 {
 }
 
 .sendNoteButton {
-    margin-left: 10px;
-    margin-top: 10px;
-    -moz-box-shadow:inset 0px 1px 0px 0px #c62d1f;
-    -webkit-box-shadow:inset 0px 1px 0px 0px #c62d1f;
-    box-shadow:inset 0px 1px 0px 0px #c62d1f;
-    background-color:#c62d1f;
-    -webkit-border-top-left-radius:6px;
-    -moz-border-radius-topleft:6px;
-    border-top-left-radius:6px;
-    -webkit-border-top-right-radius:6px;
-    -moz-border-radius-topright:6px;
-    border-top-right-radius:6px;
-    -webkit-border-bottom-right-radius:6px;
-    -moz-border-radius-bottomright:6px;
-    border-bottom-right-radius:6px;
-    -webkit-border-bottom-left-radius:6px;
-    -moz-border-radius-bottomleft:6px;
-    border-bottom-left-radius:6px;
+    margin-top: 20px;
     text-indent:0px;
-    border:1px solid #d02718;
     display:inline-block;
-    font-family: PT Sans Narrow;
-    font-size:18px;
-    font-weight:bold;
-    font-style:normal;
-    height:40px;
-    line-height:40px;
-    width:190px;
+    font-family: Helvetica;
+    font-size:15px;
+    font-weight:500;
+    height:50px;
+    line-height:50px;
+    width:95%;
     text-decoration:none;
     text-align:center;
-    text-shadow:1px 1px 0px #810e05;
     color: #ffffff;
+    text-shadow: none;
 }
 
  .sendNoteButton:hover {
